Support for mysql vajrams